Try to fixg ghost box on tablet.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1475,7 +1475,9 @@ table.ex1 tr:empty {
   display: none;
 }
 
-
+.blocker  {
+  display: none;
+  }
 
 /* 
 .do_a_search{
